// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSpeedDial.js should render active component and match snapshot 1`] = `

<div class="v-speed-dial v-speed-dial--direction-top">
  <div class="v-speed-dial__list">
    <span>
      test
    </span>
  </div>
</div>

`;

exports[`VSpeedDial.js should render component and match snapshot 1`] = `

<div class="v-speed-dial v-speed-dial--direction-top">
  <div class="v-speed-dial__list">
  </div>
</div>

`;

exports[`VSpeedDial.js should render component with custom direction and match snapshot 1`] = `

<div class="v-speed-dial v-speed-dial--direction-right">
  <div class="v-speed-dial__list">
  </div>
</div>

`;
